소모임 정보 업데이트

--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -335,7 +335,7 @@
                             android:textSize="18sp" />
 
                         <ListView
-                            android:id="@+id/listview"
+                            android:id="@+id/locationlist"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/ic_rounded_rectangle"/>
