--- a/app/src/main/res/drawable/r4_stroke_line.xml
+++ b/app/src/main/res/drawable/r4_stroke_line.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="4dp"/>
     <stroke android:width="1dp"
-        android:color="@color/line"/>
+        android:color="#7c7f90"/>
 </shape>
