--- a/app/src/main/res/layout/activity_register4.xml
+++ b/app/src/main/res/layout/activity_register4.xml
@@ -150,6 +150,8 @@
             android:id="@+id/schoollist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacing_m"
+            android:layout_marginRight="@dimen/spacing_m"
             android:background="@drawable/ic_rounded_rectangle"/>
     </LinearLayout>
 
