--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#f7f7fa</color>
     <color name="colorAccent">#03DAC5</color>
     <!-- 제플린 스타일 가이드 -->
-    <color name="playviolet">#684bff</color>
+    <color name="playviolet">#33353d</color>
     <color name="gray">#dddde2</color>
     <color name="back">#f7f7fa</color>
     <color name="white">#ffffff</color>
