방장용 가입 수락 화면 코드 수정

--- a/app/src/main/res/layout/activity_join_accept.xml
+++ b/app/src/main/res/layout/activity_join_accept.xml
@@ -8,7 +8,7 @@
     tools:context=".infoGroup.JoinAcceptActivity">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_waiting_users"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_m"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tv_waiting_users_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_xs"
@@ -34,17 +34,17 @@
         android:text="0"
         android:textColor="#33353d"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/tv_waiting_users"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rv_waiting_users"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_m"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_waiting_users" />
 
     <ImageView
         android:id="@+id/image_no_member"
