--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="68dp"
     android:layout_height="78dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ImageView
@@ -14,6 +14,17 @@
         app:layout_constraintTop_toTopOf="parent"
 
         android:contentDescription="@null" />
+
+    <ImageView
+        android:id="@+id/image_group_king"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:visibility="gone"
+        android:contentDescription="@null"
+        android:src="@drawable/crown_1_f_451" />
 
     <TextView
         android:id="@+id/name"
