--- a/app/src/main/res/layout/activity_join_accept.xml
+++ b/app/src/main/res/layout/activity_join_accept.xml
@@ -14,9 +14,9 @@
         android:layout_marginStart="@dimen/spacing_m"
         android:layout_marginLeft="@dimen/spacing_m"
         android:layout_marginTop="@dimen/spacing_xxl_2"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
-        android:text="가입 신청"
+        android:text="가입 신청 목록"
         android:textColor="#3b3e4a"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginTop="@dimen/spacing_xxl_2"
         android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
-        android:text="0"
+        android:text=""
         android:textColor="#33353d"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/tv_waiting_users"
@@ -55,6 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_no_member"
 
+        android:visibility="gone"
         android:contentDescription="@null"
         app:srcCompat="@drawable/ic_none" />
 
@@ -74,6 +75,7 @@
         android:fontFamily="@font/notosanskr_regular"
         android:gravity="center"
 
+        android:visibility="gone"
         android:includeFontPadding="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
